--- a/RejestrOsobowy.AppWPF/Windows/PersonWindow.xaml
+++ b/RejestrOsobowy.AppWPF/Windows/PersonWindow.xaml
@@ -8,6 +8,6 @@
         mc:Ignorable="d"
         Title="PersonWindow" Height="450" Width="800">
     <Grid>
-        
+        <ContentControl x:Name="WindowContentControl" Content="{Binding vm._View}" />
     </Grid>
 </metro:MetroWindow>
